updated installation script

--- a/src/science/Report.tex
+++ b/src/science/Report.tex
@@ -1,6 +1,6 @@
 \input{Preamble/Preamble}
 
-\title{Data Partitioning for Multi-threaded Applications\\ A case study using Median Filter and Pthreads}
+\title{}
 
 \author{%
  \setcounter{author}{1}
