--- a/install
+++ b/install
@@ -1,7 +1,7 @@
 #!/bin/bash
 
 # start the script
-echo "Welcome to Bisen Appa\n\n Installing now..."
+echo 'Welcome to Bisen Appa Installing now...'
 
 # check if latex is installed
 installed=`which latex`
@@ -12,8 +12,10 @@ if [ ! -n "$installed" ]; then
 
 		#install texfull-live
 		sudo apt-get install texlive-full
+        echo 'installing linux'
 fi
 
+echo 'latex has been installed'
 # also check if git has been installed
 if [ ! -f /usr/bin/git ]; then
 	
@@ -21,17 +23,17 @@ if [ ! -f /usr/bin/git ]; then
 		sudo apt-get install git
 
 fi
-echo 'latex has been installed'
 
 # move template to /etc/appa folder
 echo 'making a folder in ~/.appa/'
-sudo mkdir ~/.appa/src/
-sudo mkdir ~/.appa/src/science
-sudo mkdir ~/.appa/src/blank
+mkdir ~/.appa
+mkdir ~/.appa/src/
+mkdir ~/.appa/src/science
+mkdir ~/.appa/src/blank
 
 echo 'copying source files into /etc/appa'
-sudo cp -r src/blank/* src/Makefile ~/.appa/blank/
-sudo cp -r src/science/* src/Makefile ~/.appa/science/
+cp -r src/blank/* src/Makefile ~/.appa/src/blank/
+cp -r src/science/* src/Makefile ~/.appa/src/science/
 
 # copy appa script into /usr/local/bin
 echo 'copying appa to /usr/local/bin'
