--- a/install
+++ b/install
@@ -37,6 +37,9 @@ cp -r src/science/* src/Makefile ~/.appa/src/science/
 
 # copy appa script into /usr/local/bin
 echo 'copying appa to /usr/local/bin'
+# create the executable
+chmod a+x bin/appa
+# copy to filesystem
 sudo cp bin/appa /usr/local/bin
 
 # done
