Updated source code Added more templates and updated the script, the install script is still buggy but will continue to work on it

--- a/src/blank/main.tex
+++ b/src/blank/main.tex
@@ -18,6 +18,11 @@
 \usepackage{siunitx}
 \usepackage[style=english,english=british]{csquotes}
 \graphicspath{{./fig/}}
+
+%------------------------
+%   User defined macros 
+%------------------------
+\usepackage{macros} 
 \title{}
 \author{}
 \begin{document}
