--- a/install
+++ b/install
@@ -1,27 +1,30 @@
 #!/bin/bash
 
-# start the script
-echo 'Welcome to Bisen Appa Installing now...'
-
 # check if latex is installed
 installed=`which latex`
 
-# if no latex has been installed
-
+# ask user if to install latex if not installed
 if [ ! -n "$installed" ]; then
 
-		#install texfull-live
-		sudo apt-get install texlive-full
-        echo 'installing linux'
+    #install texfull-live
+    echo '............latex not installed, install latex?'
+    select yn in "Y" "n"; do 
+        case $yn  in 
+            Y ) sudo apt-get install texlive-full; break;;
+            n ) exit;;
+        esac
+    done
 fi
 
-echo 'latex has been installed'
+echo '...........latex has been installed'
+echo '...........checking git'
+
 # also check if git has been installed
 if [ ! -f /usr/bin/git ]; then
 	
 		# install git
-		sudo apt-get install git
-
+    echo '...........installing git'
+    sudo apt-get install git
 fi
 
 # move template to /etc/appa folder
@@ -30,6 +33,7 @@ mkdir ~/.appa
 mkdir ~/.appa/src/
 mkdir ~/.appa/src/science
 mkdir ~/.appa/src/blank
+mkdir ~/.appa/src/prezi
 
 echo 'copying source files into /etc/appa'
 cp -r src/blank/* src/Makefile ~/.appa/src/blank/
@@ -37,9 +41,11 @@ cp -r src/science/* src/Makefile ~/.appa/src/science/
 
 # copy appa script into /usr/local/bin
 echo 'copying appa to /usr/local/bin'
+
 # create the executable
-chmod a+x bin/appa
-# copy to filesystem
+chmod +x bin/appa
+
+# copy to filesystem local bin folder
 sudo cp bin/appa /usr/local/bin
 
 # done
