--- a/src/science/Report.tex
+++ b/src/science/Report.tex
@@ -4,13 +4,12 @@
 
 \author{%
  \setcounter{author}{1}
- \IEEEauthorblockN{Petrus Kambala\theauthor\ and Thato Semoko\theauthor}
+ \IEEEauthorblockN{\theauthor}
  \setcounter{author}{1}
  \IEEEauthorblockA{%
-  EEE4084F Class of 2018\\
-  University of Cape Town\\
+  Class of 2018\\
+  University\\
   South Africa\\
-  \theauthor{}KMBPET001~~\theauthor{}SMKTHA004\\
  }
 }
 
