--- a/install
+++ b/install
@@ -25,7 +25,7 @@ mkdir -p ~/.appa
 echo 'copying source files into /etc/appa'
 cp -r src/* src/Makefile ~/.appa/src/blank/
 cp -r src/science/* src/Makefile ~/.appa/src/science/
-cp -r src/prezi/* src/Makefile ~/.appa/src/prezi/
+cp -r src/presentation/* src/Makefile ~/.appa/src/presentation/
 
 # copy appa script into /usr/local/bin
 echo 'copying appa to /usr/local/bin'
